# coursework_2

./: .flake8  .gitignore  README.md  pyproject.toml
src/kursovaya/: api.py  json_saver.py  main.py  utils.py  vacancy.py
test/: test_api.py  test_json_saver.py  test_vacancy.py
tests/: test_api.py  test_json_saver.py  test_vacancy.py
