[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kursovaya"
version = "0.1.0"
authors = [
    {name = "Твоё Имя", email = "email@example.com"}
]
description = "Курсовая работа: парсинг вакансий с HH.ru"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "requests-mock",
    "black",
    "flake8",
    "isort",
    "mypy",
    "types-requests"
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    ".git",
    "migrations",
    "node_modules"
]

[project.scripts]
kursovaya = "kursovaya.main:main"

[tool.setuptools.packages.find]
where = ["src"]